# Tpyn--CTPAYCA

./: .gitignore  CMakeLists.txt  README.md  missing_s.h  tasks.url
10.1_files/: CMakeLists.txt  filter.c  filter.h  in.txt  main.c
10.2_files/: CMakeLists.txt  csv2tsv.sh  main.c  students.csv  students.tsv
12.1_linkedlist/: CMakeLists.txt  main.c
12.2_linkedlist/: CMakeLists.txt  main.c
1_arith/: CMakeCache.txt  CMakeLists.txt  main.c
2_conditions/: main.c
2_if/: CMakeLists.txt  main.c
3_int/: CMakeLists.txt  main.c
4_loops/: CMakeLists.txt  main.c
5_arrays/: CMakeLists.txt  main.c
6_nested_loops/: CMakeLists.txt  main.c
7_strings/: CMakeLists.txt  main.c  test.txt
8.1_matrices/: CMakeLists.txt  main.c
8.2_matrices/: CMakeLists.txt  main.c
9.1_functions/: CMakeLists.txt  main.c
9.2_functions/: CMakeLists.txt  main.c  test.txt
conspect/: README.md
java/task01-arith/: pom.xml
java/task01-arith/src/main/java/: module-info.java
java/task01-arith/src/main/java/io/github/kawazaki42/task01arith/: ArithExampleApplication.java  Controller.java  HelloApplication.java  HelloController.java  Model.java
java/task01-arith/src/main/resources/io/github/kawazaki42/task01arith/: hello-view.fxml  view.fxml
java/task02-loops/: pom.xml
java/task02-loops/src/main/java/: module-info.java
java/taskxx.1-sllist/: DoublyLinkedList.java  README.md  SinglyLinkedList.java  TaskDouble.java  TaskSingle.java  TestIterateDouble.java
lib/: sllist.c
libarrays/: arrays.c  arrays.h
mylibs/: CMakeLists.txt  dllist.c  dllist.h  sllist.c  sllist.h
(+8 files in other folders)
